testsuite/tests/rename/should_compile/T7672.hs
module T7672 where
import qualified T7672a
data T = S B.T
