testsuite/tests/rename/should_fail/T23982b_aux.hs
module T23982b_aux where
  data A = MkA
  data B = MkB

  data T = A A | B B
